<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic_banner"
            android:icon="@drawable/ic_store"
            android:title="@string/basic_banners" />
        <item
            android:id="@+id/nav_intersticial_banner"
            android:icon="@drawable/ic_store"
            android:title="@string/interstitial_banner" />
        <item
            android:id="@+id/nav_native_banner"
            android:icon="@drawable/ic_store"
            android:title="@string/native_banner" />
        <item
            android:id="@+id/nav_reward_ad"
            android:icon="@drawable/ic_store"
            android:title="@string/rewarded_ad" />
    </group>
</menu>